# afdsmgrd

./: AfConfReader.cc  AfDataSetManager.cc  AfDataSetManager.h  AfDataSetSrc.cc  AfDataSetSrc.h  AfLog.cc  AfLog.h  BugsAndFeatures.md  CMakeLists.txt  Makefile  ProjectHome.md  SvnInfo.h  configure  main.cc  release.sh
branches/devel/: CMakeLists.txt
branches/devel/cmake/modules/: FindApMon.cmake  FindRoot.cmake
branches/devel/etc/: afdsmgrd.conf  afdsmgrd.conf.example  afdsmgrd.conf.example.in  afdsmgrd_ctl.in
branches/devel/etc/init.d/: afdsmgrd.in
branches/devel/etc/sysconfig/: afdsmgrd.in
branches/devel/macros/: StageXrd.C  VerifyRootFile.C
branches/devel/macros/par/afdsutil/: afdsutil.C
branches/devel/scripts/: launch-root.sh.in
branches/devel/src/: CMakeLists.txt  afConfig.cc  afConfig.h  afDataSetList.cc  afDataSetList.h  afExtCmd.cc  afExtCmd.h  afLog.cc  afLog.h  afOpQueue.cc  afOpQueue.h  afQueueEntry.cc  afQueueEntry.h  afRegex.cc  afRegex.h  afUrlRegex.cc  afUrlRegex.h  afdsmgrd.cc  asd.cc  execwrapper.cc  readds.cc  tellpid.cc  test.cc
branches/devel/src/old/: AfDataSetSrc.h  AfLog.cc  AfStageUrl.cc
branches/old/scripts/: afmss  afxfr
branches/old/src/: AfConfReader.h  AfDataSetsManager.cc  AfVersion.h
cmake/modules/: FindApMon.cmake  FindRoot.cmake
etc/: afdsmgrd.conf.example.in  afdsmgrd_sysconfig  afverifier.conf.example.in  svn_keywords_test.h
etc/init.d/: afdsmgrd  afdsmgrd.in  afrenewauthd
etc/sysconfig/: afdsmgrd  afdsmgrd.example.in  afdsmgrd.in  afrenewauthd.in
etc/xrootd/: afdsmgrd.cf.example  single_dataset_src.cf.example
macros/: CreateDataSetFromAliEn.C  LocateVerifyXrd.C  StageXrd.C  Verify.C  afdsutil.C
macros/par/afdsutil/: afdsutil.C
root/: root_main_configure
scripts/: afauthtest  afdsmgrd-root.sh.in  afdsmgrd-xrd-stage-verify.sh.in  aflib  afrenewauth  afsynstg  afverifier-xrd-locate.sh.in  afverifier-xrd-rm.sh.in  afxfr  afxrdstage  launch-root.sh.in
src/: AfConfReader.cc  AfConfReader.h  AfDataSetManager.cc  AfDataSetManager.h  AfDataSetSrc.cc  AfDataSetSrc.h  AfDataSetsManager.cc  AfDataSetsManager.h  AfLog.cc  AfLog.h  AfStageUrl.h  AfVersion.h  CMakeLists.txt  Makefile  afConfig.cc  afConfig.h  afDataSetList.h  afExtCmd.cc  afExtCmd.h  afLog.cc  afNotify.h  afNotifyApMon.cc  afNotifyApMon.h  afOpQueue.cc  afOpQueue.h  afOptions.h.in  afResMon.cc  afResMon.h  afdsmgrd.cc  execwrapper.cc  shared_1.cc  test.cc  verifier.cc
src/apmon/: ChangeLog  README  configure  configure.ac  proc_utils.cpp  proc_utils.h  utils.cpp
src/apmon/examples/: Makefile.in
tags/v0.1.0/: Makefile  configure
tags/v0.1.1/: configure  release.sh
tags/v0.1.1/src/: AfDataSetSrc.cc  AfDataSetsManager.cc  AfDataSetsManager.h  AfStageUrl.cc  afdsmgrd.cc
tags/v0.1.3/: Makefile
tags/v0.1.3/src/: AfVersion.h
tags/v0.1.4/src/: AfDataSetsManager.cc  AfVersion.h
tags/v0.1.5/macros/: afdsutil.C
tags/v0.1.5/src/: AfDataSetSrc.cc  AfDataSetsManager.cc  AfDataSetsManager.h  AfVersion.h
tags/v0.1.6/src/: AfDataSetSrc.cc  AfDataSetsManager.cc  AfVersion.h
tags/v0.1.7/: Makefile
tags/v0.1.7/macros/: afdsutil.C
tags/v0.1.7/src/: AfDataSetsManager.cc  AfVersion.h
tags/v0.1.8/: CMakeLists.txt
tags/v0.1.8/src/: AfDataSetSrc.cc  AfStageUrl.h  AfVersion.h
tags/v0.1.9/: configure  release.sh
tags/v0.1.9/macros/: afdsutil.C
tags/v0.1.9/src/: AfDataSetSrc.cc  AfStageUrl.h  AfVersion.h
tags/v0.2.0/src/: AfDataSetSrc.cc  AfDataSetsManager.h  AfLog.cc  AfVersion.h
tags/v0.2.1/src/: AfConfigure.h.in  AfDataSetSrc.h  AfLog.h  AfStageUrl.cc  AfVersion.h
tags/v0.3.0/src/: AfVersion.h
tags/v0.4.1/macros/: CreateDataSetFromAliEn.C
tags/v0.4.1/src/: AfConfReader.cc
tags/v0.4.2/macros/: CreateDataSetFromAliEn.C
tags/v0.4.2/src/: AfDataSetsManager.h  AfVersion.h
tags/v0.4.3/: CMakeLists.txt  configure
tags/v0.4.3/macros/: CreateDataSetFromAliEn.C
tags/v0.4.3/scripts/: afauthtest
tags/v0.9.0/: CMakeLists.txt
tags/v0.9.0/etc/: afdsmgrd.conf.example.in
tags/v0.9.0/src/: CMakeLists.txt  afOpQueue.h  afOptions.h.in  afdsmgrd.cc  shared_2.cc
tags/v0.9.1/: CMakeLists.txt
tags/v0.9.1/macros/: CreateDataSetFromAliEn.C  StageXrd.C
tags/v0.9.1/scripts/: afauthtest  afdsmgrd-root.sh.in  aflib  afmss  afxfr
tags/v0.9.1/src/: CMakeLists.txt  afConfig.h  afExtCmd.cc  afLog.h  afNotify.cc  afNotifyApMon.h  afOpQueue.h  afOptions.h.in  test.cc
tags/v0.9.10/src/: verifier.cc
tags/v0.9.2/macros/: Verify.C
tags/v0.9.2/scripts/: afverifier-xrd-locate.sh.in
tags/v0.9.2/src/: afConfig.cc  afDataSetList.cc  afDataSetList.h  afExtCmd.cc  afOpQueue.cc  afOptions.h.in
tags/v0.9.3/etc/: afverifier.conf.example.in
tags/v0.9.3/scripts/: afdsmgrd-root.sh.in  afdsmgrd-xrd-stage-verify.sh.in  afverifier-xrd-locate.sh.in
tags/v0.9.3/src/: afOptions.h.in  afdsmgrd.cc
tags/v0.9.4/scripts/: afrenewauth
tags/v0.9.4/src/: afOptions.h.in
tags/v0.9.5/src/: afExtCmd.h  (+1 more)
tags/v0.9.7/: CMakeLists.txt
trunk/: AfConfReader.cc  AfConfReader.h  AfDataSetManager.cc  AfDataSetManager.h  AfDataSetSrc.cc  AfDataSetSrc.h  AfLog.cc  AfLog.h  CMakeLists.txt  Makefile  configure  main.cc  release.sh
trunk/etc/: afdsmgrd.conf.example.in  afdsmgrd_start_stop  svn_keywords_test.h
trunk/macros/: CreateDataSetFromAliEn.C  Verify.C  afdsutil.C
trunk/root/: root_main_Makefile
trunk/scripts/: afdsmgrd-root.sh.in  aflib  afmss  afrenewauth  afverifier-xrd-locate.sh.in  afxfr  afxrdstage
trunk/src/: AfDataSetManager.h  AfDataSetSrc.cc  AfDataSetSrc.h  AfDataSetsManager.cc  AfDataSetsManager.h  AfLog.cc  AfLog.h  AfStageUrl.cc  AfStageUrl.h  AfVersion.h  CMakeLists.txt  Makefile  afConfig.cc  afConfig.h  afDataSetList.cc  afDataSetList.h  afExtCmd.cc  afExtCmd.h  afLog.cc  afLog.h  afNotify.cc  afNotify.h  afNotifyApMon.cc  afOpQueue.cc  afOptions.h.in  afRegex.cc  afRegex.h  afdsmgrd.cc  chdsacl.cc  execwrapper.cc  root_valgrind.supp  test.cc  verifier.cc
trunk/src/apmon/: AUTHORS  ApMon.cpp  ApMon.h  Makefile.in  config.h.in  mkinstalldirs  monitor_utils.cpp  monitor_utils.h  utils.h
wiki/: BugsAndFeatures.wiki  Start.wiki
(+63 files in other folders)
